Bug 99981 - Dialog Tools > Customize > Add freezes with GTK3
Summary: Dialog Tools > Customize > Add freezes with GTK3
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-05-21 15:22 UTC by Jean-Baptiste Faure
Modified: 2016-10-25 19:01 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2016-05-21 15:22:03 UTC
Steps to reproduce:
1/ start the master
2/ in the startcenter or whatever module: menu Tools > Customize -> select the Menus tab
3/ click the Add button -> the Add Commands dialog opens
4/ try to select something in the Category list or in the Commands list

What happens: nothing, whatever you use to navigate, the mouse or the keyboard, both do nothing. The only way to close this dialog is the Escape key.

Tested in the master built at home under Ubuntu 16.04 x86-64 with gcc 5.3.1
Version: 5.2.0.0.alpha1+
Build ID: db787d50d0f57753d2ca46755f681ed959d69ae3

Works as expected in LO 5.1.4.0.0+ built at home too.

Best regards. JBF
Comment 1 raal 2016-05-22 06:31:20 UTC
works in Version: 5.2.0.0.alpha1+
Build ID: 65b327b873e67ae24133b6e4afef5e8a12ed822e
CPU Threads: 1; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-05-10_01:02:23
Comment 2 Julien Nabet 2016-05-22 08:42:33 UTC
On pc Debian x86-64 with master sources updated yesterday, I could reproduce this.
However, it seems to be only with gtk3 (which is by default for me).
Workaround: export SAL_USE_VCLPLUGIN=gtk for example.
Comment 3 Jean-Baptiste Faure 2016-05-22 14:48:39 UTC
(In reply to Julien Nabet from comment #2)
> On pc Debian x86-64 with master sources updated yesterday, I could reproduce
> this.
> However, it seems to be only with gtk3 (which is by default for me).
> Workaround: export SAL_USE_VCLPLUGIN=gtk for example.

Indeed, it works with gtk, but, as you said, gtk3 is the default.

Best regards. JBF
Comment 4 Commit Notification 2016-05-23 12:06:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1765ae3f74c65ad52b79d4ee29ac761f16ddd7bf

Resolves: tdf#99981 make ScriptSelectorDialog modal for its parent

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.