Resolves: tdf#99981 make ScriptSelectorDialog modal for its parent

Change-Id: Ia522b36cd1f5d47d08afa74a22cec11de465f567