cui/source/customize/cfg.cxx
@@ -2810,7 +2810,7 @@ IMPL_LINK_NOARG_TYPED( SvxMenuConfigPage, AddCommandsHdl, Button *, void )
 
     m_pSelectorDlg->SetImageProvider( GetSaveInData() );
 
-    m_pSelectorDlg->Show();
+    m_pSelectorDlg->Execute();
 }
 
 SaveInData* SvxMenuConfigPage::CreateSaveInData(
@@ -4690,7 +4690,7 @@ IMPL_LINK_NOARG_TYPED( SvxToolbarConfigPage, AddCommandsHdl, Button *, void )
 
     m_pSelectorDlg->SetImageProvider( GetSaveInData() );
 
-    m_pSelectorDlg->Show();
+    m_pSelectorDlg->Execute();
 }
 
 IMPL_LINK_NOARG_TYPED( SvxToolbarConfigPage, AddFunctionHdl, SvxScriptSelectorDialog&, void )
